--- a/source/index.html
+++ b/source/index.html
@@ -42,114 +42,129 @@
       <div class="swiper-button-next"></div>
     </div>
   </section>
-  <section>
-    <form action="/" method="post">
+  <section class="product">
+    <form class="form" action="/" method="post">
       <ul class="card">
         <li class="card__item">
           <h4 class="subtitle">New collection</h4>
           <h3 class="card__title">Gussi light coat</h3>
-          <p>It takes you from the party to the after party with its fashion-forward styles. A playfull blendof retro
+          <p class="card__text">It takes you from the party to the after party with its fashion-forward styles. A
+            playfull blendof retro
             and modern outdoor design.</p>
         </li>
         <li class="card__item characteristics">
           <div>
-            <fieldset>
+            <fieldset class="characteristics__fieldset color">
               <h4 class="subtitle">COLOUR</h4>
-              <ul>
-                <li>
-                  <label class="visually-hidden" for="color-dark-blue">Dark blue</label>
-                  <input type="radio" name="color" value="dark-blue" id="color-dark-blue">
+              <ul class="color__list">
+                <li class="color__item">
+                  <input class="visually-hidden color__input" type="radio" name="color" value="dark-blue" id="color-dark-blue" checked>
+                  <label class="color__label" for="color-dark-blue">
+                    <span class="color__radio-icon color__radio-icon--dark-blue"></span>
+                    <span class="visually-hidden">Dark blue</span>
+                  </label>
                 </li>
-                <li>
-                  <label class="visually-hidden" for="color-grey">Grey</label>
-                  <input type="radio" name="color" value="grey" id="color-grey">
+                <li class="color__item">
+                  <input class="visually-hidden color__input" type="radio" name="color" value="grey" id="color-grey">
+                  <label class="color__label" for="color-grey">
+                    <span class="color__radio-icon color__radio-icon--grey"></span>
+                    <span class="visually-hidden">Grey</span>
+                  </label>
                 </li>
-                <li>
-                  <label class="visually-hidden" for="color-blue">Blue</label>
-                  <input type="radio" name="color" value="blue" id="color-blue">
+                <li class="color__item">
+                  <input class="visually-hidden color__input" type="radio" name="color" value="blue" id="color-blue">
+                  <label class="color__label" for="color-blue">
+                    <span class="color__radio-icon color__radio-icon--blue"></span>
+                    <span class="visually-hidden">Blue</span>
+                  </label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset>
+            <fieldset class="characteristics__fieldset size">
               <h4 class="subtitle">Size</h4>
-              <ul>
-                <li>
-                  <label class="visually-hidden" for="size-extra-small">Extra small</label>
-                  <input type="radio" name="size" value="extra-small" id="size-extra-small">
-                  <span>XS</span>
+              <ul class="size__list">
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="extra-small" id="size-extra-small">
+                  <label class="size__label" for="size-extra-small">
+                    <span class="size__radio-icon">XS</span>
+                  </label>
                 </li>
-                <li>
-                  <label class="visually-hidden" for="size-small">Small</label>
-                  <input type="radio" name="size" value="small" id="size-small">
-                  <span>S</span>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="small" id="size-small" checked>
+                  <label class="size__label" for="size-small">
+                    <span class="size__radio-icon">S</span>
+                  </label>
                 </li>
-                <li>
-                  <label class="visually-hidden" for="size-medium">Medium</label>
-                  <input type="radio" name="size" value="medium" id="size-medium">
-                  <span>M</span>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="medium" id="size-medium">
+                  <label class="size__label" for="size-medium">
+                    <span class="size__radio-icon">M</span>
+                  </label>
                 </li>
-                <li>
-                  <label class="visually-hidden" for="size-large">Large</label>
-                  <input type="radio" name="size" value="large" id="size-large">
-                  <span>L</span>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="large" id="size-large">
+                  <label class="size__label" for="size-large">
+                    <span class="size__radio-icon">L</span>
+                  </label>
                 </li>
-                <li>
-                  <label class="visually-hidden" for="size-extra-large">Extra Large</label>
-                  <input type="radio" name="size" value="extra-large" id="size-extra-large" disabled>
-                  <span>XL</span>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="extra-large" id="size-extra-large" disabled>
+                  <label class="size__label" for="size-extra-large">
+                    <span class="size__radio-icon">XL</span>
+                  </label>
                 </li>
               </ul>
-              <button type="button"></button>
+              <button class="button button--size size__button" type="button">Size guide</button>
             </fieldset>
           </div>
           <div>
-            <fieldset>
+            <fieldset class="characteristics__fieldset quantity">
               <h4 class="subtitle">Quantity</h4>
-              <div>
-                <button type="button">
+              <div class="quantity__inner">
+                <button class="button quantity__button quantity__button--less" type="button">
                   <span class="visually-hidden">Less</span>
                 </button>
-                <label for="quantity">Quantity</label>
-                <input type="text" id="quantity">
-                <button type="button">
+                <label class="visually-hidden" for="quantity">Quantity</label>
+                <input class="quantity__input" type="number" id="quantity" value="1">
+                <button class="button quantity__button quantity__button--more" type="button">
                   <span class="visually-hidden">More</span>
                 </button>
               </div>
             </fieldset>
-            <div>
+            <div class="cost">
               <h4 class="subtitle">Cost</h4>
-              <span>
-                <span>$120</span>
-                <span>.00</span>
+              <span class="cost__value">
+                <span class="cost__integer">$120</span><span class="cost__decimal">.00</span>
               </span>
             </div>
           </div>
         </li>
-        <li class="card__item">
+        <li class="card__item details">
           <h4 class="subtitle">PRODUCT DETAILS</h4>
-          <p>Look out for its standout party dresses, feminine details, statement jackets and cool denim including
+          <p class="details__text">Look out for its standout party dresses, feminine details, statement jackets and cool
+            denim including
             skinny-cut jeans and cute denim shorts, which sit alongside its directional footwear and swimwear
             ranges.</p>
-          <p>63% Viscose, 37% Polyamide.</p>
+          <p class="details__information">63% Viscose, 37% Polyamide.</p>
         </li>
       </ul>
-      <button type="submit">Order now</button>
+      <button class="button button--submit form__button" type="submit">Order now</button>
     </form>
-    <ul>
-      <li>
-        <button type="button">Delivery</button>
-        <div>
-          <div>
+    <ul class="product__list">
+      <li class="spoiler">
+        <button class="button spoiler__button" type="button">Delivery</button>
+        <div class="spoiler__content">
+          <div class="spoiler__inner">
             <p>Delivered on or before Monday, 25 February 2019</p>
             <p>Note: Subject to placing your order before specific cut-off times. Details available in checkout.</p>
             <p>For free delivery – spend over <strong>£18.08</strong></p>
           </div>
         </div>
       </li>
-      <li>
-        <button type="button">Return</button>
-        <div>
-          <div>
+      <li class="spoiler">
+        <button class="button spoiler__button" type="button">Return</button>
+        <div class="spoiler__content">
+          <div class="spoiler__inner">
             <p>Return through your local Boxberry store available in over 2,300 locations.
               You can create your return on the carrier website by clicking the create return link.
               Open 7 days a week, early until late.</p>
@@ -158,51 +173,64 @@
       </li>
     </ul>
   </section>
-  <section>
+  <section class="collections">
     <h4 class="subtitle">Similar Collections</h4>
-    <ul>
-      <li>
-        <h5>Kingsman style</h5>
-        <p>More silk, more freedom</p>
+    <ul class="collections__list">
+      <li class="collections__item">
+        <h5 class="collections__title">Kingsman style</h5>
+        <p class="collections__text">More silk, more freedom</p>
       </li>
-      <li>
-        <h5>Denim goddess</h5>
-        <p>More denim, more freedom</p>
+      <li class="collections__item">
+        <h5 class="collections__title">Denim goddess</h5>
+        <p class="collections__text">More denim, more freedom</p>
       </li>
     </ul>
   </section>
-  <section>
-    <h3>Subscribe our newsletter</h3>
-    <p>Get notified about new collections of Gussi Store</p>
-    <form action="/" method="post">
-      <ul>
-        <li>
+  <section class="newsletter">
+    <h3 class="newsletter__title">Subscribe our newsletter</h3>
+    <p class="newsletter__text">Get notified about new collections of Gussi Store</p>
+    <form class="form" action="/" method="post">
+      <ul class="form__list">
+        <li class="form_item">
           <label class="visually-hidden" for="user-name">User name</label>
-          <input type="text" name="user-name" id="user-name" placeholder="Enter your name">
+          <input class="form__input" type="text" name="user-name" id="user-name" placeholder="Enter your name">
         </li>
-        <li>
+        <li class="form_item">
           <label class="visually-hidden" for="user-email">User email</label>
-          <input type="email" name="user-email" id="user-email" placeholder="Enter your name">
+          <input class="form__input" type="email" name="user-email" id="user-email" placeholder="Enter your e-mail">
         </li>
       </ul>
-      <div>
-        <p>Choose your gender:</p>
-        <ul>
-          <li>
-            <input type="radio" name="gender" value="gender-male" id="gender-male">
-            <label for="gender-male">Male</label>
+      <div class="gender">
+        <p class="gender__text">Choose your gender:</p>
+        <ul class="gender__list">
+          <li class="gender__item">
+            <input class="visually-hidden gender__input" type="radio" name="gender" value="gender-male" id="gender-male" checked>
+            <label class="gender__label" for="gender-male">
+              <span class="gender__radio-icon-wrapper"></span>
+              <span>Male</span>
+            </label>
           </li>
-          <li>
-            <input type="radio" name="gender" value="gender-female" id="gender-female">
-            <label for="gender-female">Female</label>
+          <li class="gender__item">
+            <input class="visually-hidden gender__input" type="radio" name="gender" value="gender-female" id="gender-female">
+            <label class="gender__label" for="gender-female">
+              <span class="gender__radio-icon-wrapper"></span>
+              <span>Female</span>
+            </label>
           </li>
         </ul>
       </div>
-      <div>
-        <label for="details">Look out for its standout party dresses, feminine details</label>
-        <input type="checkbox" name="details" value="details" id="details">
+      <div class="agreement">
+        <label class="agreement__label-checkbox">
+          <input class="visually-hidden" type="checkbox" name="details" value="details" checked>
+          <span class="agreement__checkbox-icon-wrapper">
+            <svg class="agreement__checkbox-icon-checked" width="10" height="9">
+              <use xlink:href="img/sprite.svg#icon-checkbox"></use>
+            </svg>
+          </span>
+          <span class="agreement__checkbox-text">Look out for its standout party dresses, feminine details</span>
+        </label>
       </div>
-      <button type="submit">Subscribe Gussi</button>
+      <button class="button button--submit" type="submit">Subscribe Gussi</button>
     </form>
   </section>
 
