--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@
           and modern outdoor design.</p>
       </li>
       <li class="card__item characteristics">
-        <div>
+        <div class="characteristics__fieldset-wrapper">
           <fieldset class="characteristics__fieldset color">
             <h4 class="subtitle">COLOUR</h4>
             <ul class="color__list">
@@ -101,42 +101,44 @@
           </fieldset>
           <fieldset class="characteristics__fieldset size">
             <h4 class="subtitle">Size</h4>
-            <ul class="size__list">
-              <li class="size__item">
-                <input class="size__input visually-hidden" type="radio" name="size" value="extra-small"
-                       id="size-extra-small">
-                <label class="size__label" for="size-extra-small">
-                  <span class="size__radio-icon">XS</span>
-                </label>
-              </li>
-              <li class="size__item">
-                <input class="size__input visually-hidden" type="radio" name="size" value="small" id="size-small"
-                       checked>
-                <label class="size__label" for="size-small">
-                  <span class="size__radio-icon">S</span>
-                </label>
-              </li>
-              <li class="size__item">
-                <input class="size__input visually-hidden" type="radio" name="size" value="medium" id="size-medium">
-                <label class="size__label" for="size-medium">
-                  <span class="size__radio-icon">M</span>
-                </label>
-              </li>
-              <li class="size__item">
-                <input class="size__input visually-hidden" type="radio" name="size" value="large" id="size-large">
-                <label class="size__label" for="size-large">
-                  <span class="size__radio-icon">L</span>
-                </label>
-              </li>
-              <li class="size__item">
-                <input class="size__input visually-hidden" type="radio" name="size" value="extra-large"
-                       id="size-extra-large" disabled>
-                <label class="size__label" for="size-extra-large">
-                  <span class="size__radio-icon">XL</span>
-                </label>
-              </li>
-            </ul>
-            <button class="button button--size size__button" type="button">Size guide</button>
+            <div class="size__inner">
+              <ul class="size__list">
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="extra-small"
+                         id="size-extra-small">
+                  <label class="size__label" for="size-extra-small">
+                    <span class="size__radio-icon">XS</span>
+                  </label>
+                </li>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="small" id="size-small"
+                         checked>
+                  <label class="size__label" for="size-small">
+                    <span class="size__radio-icon">S</span>
+                  </label>
+                </li>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="medium" id="size-medium">
+                  <label class="size__label" for="size-medium">
+                    <span class="size__radio-icon">M</span>
+                  </label>
+                </li>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="large" id="size-large">
+                  <label class="size__label" for="size-large">
+                    <span class="size__radio-icon">L</span>
+                  </label>
+                </li>
+                <li class="size__item">
+                  <input class="size__input visually-hidden" type="radio" name="size" value="extra-large"
+                         id="size-extra-large" disabled>
+                  <label class="size__label" for="size-extra-large">
+                    <span class="size__radio-icon">XL</span>
+                  </label>
+                </li>
+              </ul>
+              <button class="button button--size size__button" type="button">Size guide</button>
+            </div>
           </fieldset>
         </div>
         <div class="characteristics__block">
@@ -173,9 +175,9 @@
     <button class="button button--submit form__button" type="submit">Order now</button>
   </form>
   <ul class="product__list">
-    <li class="spoiler">
-      <button class="button spoiler__button" type="button">Delivery</button>
-      <div class="spoiler__content">
+    <li class="js-spoiler spoiler">
+      <button class="js-spoiler-button button spoiler__button" type="button">Delivery</button>
+      <div class="js-spoiler-content spoiler__content">
         <div class="spoiler__inner">
           <p>Delivered on or before Monday, 25 February 2019</p>
           <p>Note: Subject to placing your order before specific cut-off times. Details available in checkout.</p>
@@ -183,9 +185,9 @@
         </div>
       </div>
     </li>
-    <li class="spoiler">
-      <button class="button spoiler__button" type="button">Return</button>
-      <div class="spoiler__content">
+    <li class="js-spoiler spoiler">
+      <button class="js-spoiler-button button spoiler__button" type="button">Return</button>
+      <div class="js-spoiler-content spoiler__content">
         <div class="spoiler__inner">
           <p>Return through your local Boxberry store available in over 2,300 locations.
             You can create your return on the carrier website by clicking the create return link.
@@ -217,11 +219,11 @@
   <p class="newsletter__text">Get notified about new collections of Gussi Store</p>
   <form class="form" action="/" method="post">
     <ul class="form__list">
-      <li class="form_item">
+      <li class="form__item">
         <label class="visually-hidden" for="user-name">User name</label>
         <input class="form__input" type="text" name="user-name" id="user-name" placeholder="Enter your name">
       </li>
-      <li class="form_item">
+      <li class="form__item">
         <label class="visually-hidden" for="user-email">User email</label>
         <input class="form__input" type="email" name="user-email" id="user-email" placeholder="Enter your e-mail">
       </li>
@@ -258,7 +260,7 @@
         <span class="agreement__checkbox-text">Look out for its standout party dresses, feminine details</span>
       </label>
     </div>
-    <button class="button button--submit" type="submit">Subscribe Gussi</button>
+    <button class="button button--submit agreement__button" type="submit">Subscribe Gussi</button>
   </form>
 </section>
 <script src="js/vendor.js"></script>
